<?xml version="1.0"?>
<package>
  <name>ros_screencast</name>
  <version>0.0.1</version>
  <description>The ros_screencast package</description>

  <maintainer email="mail@rothmark.us">Markus Roth</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/herr-biber/ros_screencast</url>

  <author email="mail@rothmark.us">Markus Roth</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>python</build_depend>
  <run_depend>python</run_depend>
</package>
